--- a/requirements.txt
+++ b/requirements.txt
@@ -295,8 +295,10 @@ dicttoxml==1.7.4
 distro==1.5.0
 dj-database-url==1.0.0
 Django==4.1.2
+django-cors-headers==3.13.0
 django-heroku==0.3.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 dnslib==0.9.14
 dnspython==2.0.0
 docutils==0.16
